--- a/aula07-tabelasemantica/css/style.css
+++ b/aula07-tabelasemantica/css/style.css
@@ -17,6 +17,7 @@ body{
 #tabela1 td{ /* cada célula da tabela - td- table data*/
     border: 1px solid black;
     padding: 10px;
+    text-align: center;
 }
 
 .cabecalhoERodape{
