--- a/aula07-tabelasemantica/css/style.css
+++ b/aula07-tabelasemantica/css/style.css
@@ -1,16 +1,16 @@
 body{
-    background-color: teal;
-
+    background-color: black;
+    color: red;
 }
 
 #tabela1{
-    border: 2px solid orange;
+    border: 3px solid orange;
     border-collapse: collapse; /* juntar as linhas da borda*/
     background-color: rgb(255, 186, 179);
-    color: black;
     width:  1000px;
     height: 500px;
     margin: 0 auto;
+    color: chartreuse;
 }
 
 
@@ -18,6 +18,7 @@ body{
     border: 1px solid black;
     padding: 10px;
     text-align: center;
+    color: chartreuse;
 }
 
 .cabecalhoERodape{
@@ -37,3 +38,54 @@ body{
 #tabela1 tr:hover{
     background-color: rosybrown;
    }
+
+
+
+ /* ---------- Tabela 2 ----------*/  
+ #tabela02{
+    border: 3px solid orange;
+    box-shadow: 4px 4px 4px  orange;
+    border-collapse: collapse; /* juntar as linhas da borda*/
+    background-color: rgb(255, 186, 179);
+    color: black;
+    margin: 0 auto;
+    text-align: center;
+ }  
+
+ #tabela02 td{
+    border: 1px solid black;
+    width: 300px;
+    height: 80px;
+ }
+
+#tabela02 caption{
+    color: red;
+}
+
+
+ #tabela02 tr:nth-child(even) { /*Fileira - tr - tablw row - linhas pares com fundo ciano*/
+    background-color: rgb(247, 210, 206);
+}
+
+#tabela02 td:hover{
+ background-color: rosybrown;
+}
+
+
+#tabela02 tr:hover{
+    background-color: rosybrown;
+   }
+
+#foot{
+    text-align: center;
+}  
+
+.sublinhado{
+    text-decoration: underline;
+    text-decoration-color: chartreuse;
+}
+
+#legenda{
+    text-align: center;
+    margin: 0 auto;
+}
