criação do jogo da cobrinha dia 18/09 9c593a0

--- a/cobrinha/css/style.css
+++ b/cobrinha/css/style.css
@@ -1,13 +1,14 @@
-body{
-    background-color:#242424;
-    color: deepskyblue;
+body {
+    background-color: #242424;
+    color: cyan;
     height: 92vh;
-    width: 95vh;
+    width: 95vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
+ }
+ 
 
 footer{
     margin-top: 15px;
