--- a/site-animais/style.css
+++ b/site-animais/style.css
@@ -74,7 +74,7 @@ h1{
 /* Colunas */
 
   .col{
-    display: inline-block;
+    display: inline-grid;
     grid-column-gap: 50px;
     vertical-align: top;
     min-height: 1px;
