--- a/dino/css/style.css
+++ b/dino/css/style.css
@@ -1,4 +1,12 @@
 body{
-    background-color: black;
-    color: white;
+    background-color: #fafafa;
+}
+
+.dino {
+    background: green;
+    width: 60px;
+    height: 60px;
+
+    position: absolute;
+    bottom: 0;
 }
