--- a/dino/css/style.css
+++ b/dino/css/style.css
@@ -19,3 +19,31 @@ body{
     position: absolute;
     bottom: 0;
 }
+
+.fim-de-jogo{
+    text-align: center;
+    color: #666;
+    margin-top: 100px;
+    font-family: Arial, Helvetica, sans-serif; 
+}
+
+@keyframes deslizarParaDireita{
+    from {
+        background-position: 100%; 
+    }
+    to{
+        background-position: 0;
+    }
+}
+
+.background{
+    background: url('../img/background.png'); 
+    background-repeat: repeat-x;
+    width: 100%;
+    height: 200px;
+
+    position: absolute;
+    bottom: 0;
+
+    animation: deslizarParaDireita 1.5s infinite linear;
+}
